syntax = "proto3";

package main;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

option go_package = "/pkg";

service AuthenticationService {
  rpc CreateVerificationCode (CreateVerificationCodeRequest) returns (google.protobuf.Empty) {}
  rpc GetVerificationCode (GetVerificationCodeRequest) returns (google.protobuf.Empty) {}

  rpc SignIn (SignInRequest) returns (SignInResponse) {}
  rpc SignUp (SignUpRequest) returns (SignUpResponse) {}
  rpc SignOut (SignOutRequest) returns (google.protobuf.Empty) {}

  rpc CheckSession (google.protobuf.Empty) returns (CheckSessionResponse) {}

  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse) {}

  rpc ListSession (ListSessionRequest) returns (ListSessionResponse) {}
}

service BusinessService {
  rpc Feed (FeedRequest) returns (FeedResponse) {}
  rpc GetBusiness (GetBusinessRequest) returns (GetBusinessResponse) {}
  rpc CreateBusiness (CreateBusinessRequest) returns (CreateBusinessResponse) {}
  // rpc CreateBusinessSchedule (CreateBusinessScheduleRequest) returns (CreateBusinessScheduleResponse) {}
  rpc UpdateBusiness (UpdateBusinessRequest) returns (UpdateBusinessResponse) {}
}

service ItemService {
  rpc ListItem (ListItemRequest) returns (ListItemResponse) {}
  rpc GetItem (GetItemRequest) returns (GetItemResponse) {}
  rpc CreateItem (CreateItemRequest) returns (CreateItemResponse) {}
  rpc UpdateItem (UpdateItemRequest) returns (UpdateItemResponse) {}
  rpc DeleteItem (DeleteItemRequest) returns (google.protobuf.Empty) {}  
  rpc SearchItem (SearchItemRequest) returns (SearchItemResponse) {}
}

service UserService {
  rpc GetUser (google.protobuf.Empty) returns (GetUserResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc GetAddressInfo (GetAddressInfoRequest) returns (GetAddressInfoResponse) {}
}

service OrderService {
  rpc ListOrder (ListOrderRequest) returns (ListOrderResponse) {}
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {}
  rpc UpdateOrder (UpdateOrderRequest) returns (UpdateOrderResponse) {}
  rpc ListOrderedItem (ListOrderedItemRequest) returns (ListOrderedItemResponse) {}
}

service CartItemService {
  rpc ListCartItem (ListCartItemRequest) returns (ListCartItemResponse) {}
  rpc AddCartItem (AddCartItemRequest) returns (AddCartItemResponse) {}
  rpc CartItemQuantity (google.protobuf.Empty) returns (CartItemQuantityResponse) {}
  rpc ReduceCartItem (ReduceCartItemRequest) returns (ReduceCartItemResponse) {}
  rpc DeleteCartItem (DeleteCartItemRequest) returns (google.protobuf.Empty) {}
  rpc EmptyCartItem (google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

service BanService {
  rpc GetBannedDevice(google.protobuf.Empty) returns (GetBannedDeviceResponse) {}
  rpc GetBannedUser(google.protobuf.Empty) returns (GetBannedUserResponse) {}
}

service ObjectStorageService {
  rpc GetPresignedPutObject (GetPresignedPutRequest) returns (GetPresignedPutResponse) {}
}

// Request & Response Message

// message GetOrderRequest {
//   string id = 1;
//   google.protobuf.FieldMask fieldMask = 2;
// }

// message GetOrderResponse {
//   Order order = 1;
// }

// message CreateBusinessScheduleRequest {
//   string business_Id = 1;
//   string openingTimeSunday = 2;            
// 	string openingTimeMonday = 3;           
// 	string openingTimeTuesday = 4;          
// 	string openingTimeWednesday = 5;        
// 	string openingTimeThursday = 6;         
// 	string openingTimeFriday = 7;           
// 	string openingTimeSaturday = 8;        
// 	string closingTimeSunday = 9;          
// 	string closingTimeMonday = 10;           
// 	string closingTimeTuesday = 11;          
// 	string closingTimeWednesday = 12;        
// 	string closingTimeThursday = 13;         
// 	string closingTimeFriday = 14;           
// 	string closingTimeSaturday = 15;         
// 	string openingTimeDeliverySunday = 16;   
// 	string openingTimeDeliveryMonday = 17;   
// 	string openingTimeDeliveryTuesday = 18;  
// 	string openingTimeDeliveryWednesday = 19;
// 	string openingTimeDeliveryThursday = 20;
// 	string openingTimeDeliveryFriday = 21;   
// 	string openingTimeDeliverySaturday = 22;  
// 	string closingTimeDeliverySunday = 23;   
// 	string closingTimeDeliveryMonday = 24;    
// 	string closingTimeDeliveryTuesday = 25; 
// 	string closingTimeDeliveryWednesday = 26; 
// 	string closingTimeDeliveryThursday = 27; 
// 	string closingTimeDeliveryFriday = 28;  
// 	string closingTimeDeliverySaturday = 29;
// }

// message CreateBusinessScheduleResponse {
//   string openingTimeSunday = 1;            
// 	string openingTimeMonday = 2;           
// 	string openingTimeTuesday = 3;          
// 	string openingTimeWednesday = 4;        
// 	string openingTimeThursday = 5;         
// 	string openingTimeFriday = 6;           
// 	string openingTimeSaturday = 7;        
// 	string closingTimeSunday = 8;          
// 	string closingTimeMonday = 9;           
// 	string closingTimeTuesday = 10;          
// 	string closingTimeWednesday = 11;        
// 	string closingTimeThursday = 12;         
// 	string closingTimeFriday = 13;           
// 	string closingTimeSaturday = 14;         
// 	string openingTimeDeliverySunday = 15;   
// 	string openingTimeDeliveryMonday = 16;   
// 	string openingTimeDeliveryTuesday = 17;  
// 	string openingTimeDeliveryWednesday = 18;
// 	string openingTimeDeliveryThursday = 19;
// 	string openingTimeDeliveryFriday = 20;   
// 	string openingTimeDeliverySaturday = 21;  
// 	string closingTimeDeliverySunday = 22;   
// 	string closingTimeDeliveryMonday = 23;    
// 	string closingTimeDeliveryTuesday = 24; 
// 	string closingTimeDeliveryWednesday = 25; 
// 	string closingTimeDeliveryThursday = 26; 
// 	string closingTimeDeliveryFriday = 27;  
// 	string closingTimeDeliverySaturday = 28;
// }

message GetPresignedPutRequest {
  string lowQualityPhoto = 1;
  string highQualityPhoto = 2;
  string thumbnailQualityPhoto = 3;
  PhotoType PhotoType = 4;
}

message GetPresignedPutResponse {
  string lowQualityPhotoPresignedPutUrl = 1;
  string highQualityPhotoPresignedPutUrl = 2;
  string thumbnailPresignedPutUrl = 3;
}

message UpdateBusinessRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string address = 4;
  string phone = 5;
  string email = 6;
  string highQualityPhoto = 7;
  string highQualityPhotoBlurHash = 8;
  string lowQualityPhoto = 9;
  string lowQualityPhotoBlurHash = 10;
  repeated string municipalities = 11;
  string thumbnail = 12;
  string thumbnailBlurHash = 13;
  string deliveryPrice = 14;
  int32 timeMarginOrderMonth = 15;
  int32 timeMarginOrderDay = 16;
  int32 timeMarginOrderHour = 17;
  int32 timeMarginOrderMinute = 18;
  bool toPickUp = 19;
  bool homeDelivery = 20;
  string provinceId = 21;
  string municipalityId = 22;
}

message UpdateBusinessResponse {
  Business business = 1;
}

message CreateBusinessRequest {
  string name = 1;
  string description = 2;
  string address = 3;
  string phone = 4;
  string email = 5;
  string highQualityPhoto = 6;
  string highQualityPhotoBlurHash = 7;
  string lowQualityPhoto = 8;
  string lowQualityPhotoBlurHash = 9;
  repeated string municipalities = 10;
  string thumbnail = 11;
  string thumbnailBlurHash = 12;
  string deliveryPrice = 14;
  Point coordinates = 15;
  int32 timeMarginOrderMonth = 16;
  int32 timeMarginOrderDay = 17;
  int32 timeMarginOrderHour = 18;
  int32 timeMarginOrderMinute = 19;
  bool toPickUp = 20;
  bool homeDelivery = 21;
  string businessBrandId = 22;
  string provinceId = 23;
  string municipalityId = 24;
}

message CreateBusinessResponse {
  Business business = 1;
  repeated UnionBusinessAndMunicipality municipalities = 2;
}

message GetAddressInfoRequest {
  Point location = 1;
}

message GetAddressInfoResponse {
  string provinceId = 1;
  string provinceName = 2;
  string provinceNameAbbreviation = 3;
  string municipalityId = 4;
  string municipalityName = 5;
}

message GetBannedDeviceResponse {
	google.protobuf.Timestamp banExpirationTime = 1;
	google.protobuf.Timestamp createTime = 2;
}

message GetBannedUserResponse {
  google.protobuf.Timestamp banExpirationTime = 1;
	google.protobuf.Timestamp createTime = 2;
}

message UpdateOrderRequest {
  string id = 1;
  OrderStatusType status = 2;
}

message UpdateOrderResponse {
  Order order = 1; 
}

message CreateOrderRequest {
  repeated string cartItems = 1;                
	OrderType orderType = 2;           
	ResidenceType residenceType = 3;        
	string number = 4;         
	string address = 5;
  string instructions = 6;           
	Point coordinates = 7;    
	google.protobuf.Timestamp orderDate = 8;       
}

message CreateOrderResponse {
  Order order = 1;  
}

message ListOrderRequest {
  google.protobuf.Timestamp nextPage = 1;
  google.protobuf.FieldMask fieldMask = 2;
}

message ListOrderResponse {
  repeated Order orders = 1;
  google.protobuf.Timestamp nextPage = 2;
}

message ListOrderedItemRequest {
  string orderId = 1;
  google.protobuf.FieldMask fieldMask = 2;
}

message ListOrderedItemResponse {
  repeated OrderedItem orderedItems = 1;
  google.protobuf.Timestamp nextPage = 2;
}

// message GetCartItemRequest {
//   string id = 1;
//   google.protobuf.FieldMask fieldMask = 2;
// }

// message GetCartItemResponse {
//   Item item = 1;
// }

message UpdateItemRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string price = 4;
  string businessCollectionId = 5;
  string highQualityPhoto = 6;
  string highQualityPhotoBlurHash = 7;
  string lowQualityPhoto = 8;
  string lowQualityPhotoBlurHash = 9;
  string thumbnail = 10;
  string thumbnailBlurHash = 11;
	int64 availability = 12;       
	ItemStatusType status = 13;         
}

message UpdateItemResponse {
  Item item = 1;
}

message CartItemQuantityResponse {
  bool isFull = 1;
}

message CreateItemRequest {
  string name = 1;
  string description = 2;
  string price = 3;
  string businessCollectionId = 4;
  string highQualityPhoto = 5;
  string highQualityPhotoBlurHash = 6;
  string lowQualityPhoto = 7;
  string lowQualityPhotoBlurHash = 8;
  string thumbnail = 9;
  string thumbnailBlurHash = 10;
  string businessId = 11;
}

message CreateItemResponse {
  Item item = 1;
}

message ListCartItemRequest {
  google.protobuf.Timestamp nextPage = 1;
  google.protobuf.FieldMask fieldMask = 2;
  string municipalityId = 3;
}

message ListCartItemResponse {
  repeated CartItem cartItems = 1;
  google.protobuf.Timestamp nextPage = 2;
}

message UpdateUserRequest {
  google.protobuf.FieldMask fieldMask = 1;
  google.protobuf.FieldMask updateMask = 2;
  string email = 3;
  string fullName = 4;
  string thumbnail = 5;
  string thumbnailBlurHash = 6;
  string highQualityPhoto = 7;
  string highQualityPhotoBlurHash = 8;
  string lowQualityPhoto = 9;
  string lowQualityPhotoBlurHash = 10;
  string code = 11;
}

message UpdateUserResponse {
  User user = 1;
}

message GetUserResponse {
  User user = 1;
}

message ListSessionRequest {
  google.protobuf.FieldMask fieldMask = 1;
}

message ListSessionResponse {
  repeated Session sessions = 1;
}

message SignOutRequest {
  bool all = 1;
  string authorizationTokenId = 2;
}
 
message RefreshTokenRequest {
  string refreshToken = 1;
  google.protobuf.FieldMask fieldMask = 2;
}

message RefreshTokenResponse {
  string refreshToken = 1;
  string authorizationToken = 2;
}

message DeleteItemRequest {
  string id = 1;
}

message DeleteCartItemRequest {
  string id = 1;
  Point location = 2;
  string municipalityId = 3;
  google.protobuf.FieldMask fieldMask = 4;
}

message AddCartItemRequest {
  string itemId = 1;
  Point location = 2;
  string municipalityId = 3;
  int32 quantity = 4;
  google.protobuf.FieldMask fieldMask = 5;
}

message AddCartItemResponse {
  CartItem cartItem = 1;
}

message ReduceCartItemRequest {
  string itemId = 1;
  Point location = 2;
  int32 quantity = 3;
  string municipalityId = 4;
  google.protobuf.FieldMask fieldMask = 5;
}

message ReduceCartItemResponse {
  CartItem cartItem = 1;
}

message SearchItemRequest {
  int32 nextPage = 1;
  string name = 2;
  string provinceId = 3;
  string municipalityId = 4;
  SearchMunicipalityType searchMunicipalityType = 5;
}

message SearchItemResponse {
  repeated SearchItem items = 1;
  SearchMunicipalityType searchMunicipalityType = 2;
  int32 nextPage = 3;
}

message ListItemRequest {
  google.protobuf.Timestamp nextPage = 1;
  string businessId = 2;
  string businessCollectionId = 3;
  google.protobuf.FieldMask fieldMask = 4;
}

message ListItemResponse {
  repeated Item items = 1;
  google.protobuf.Timestamp nextPage = 2;
}

message GetItemRequest {
  string id = 1;
  Point location = 2;
  google.protobuf.FieldMask fieldMask = 3;
}

message GetItemResponse {
  Item item = 1;
}

message FeedRequest {
  Point location = 1;
  string provinceId = 2;
  string municipalityId = 3;
  bool toPickUp = 4;
  bool homeDelivery = 5;
  SearchMunicipalityType searchMunicipalityType = 6;
  int32 nextPage = 7;
  google.protobuf.FieldMask fieldMask = 8;
}

message FeedResponse {
  repeated Business businesses = 1;
  SearchMunicipalityType searchMunicipalityType = 2;
  int32 nextPage = 3;
}

message GetBusinessRequest {
  string id = 1;
  Point location = 2;
  google.protobuf.FieldMask fieldMask = 3;
}

message GetBusinessResponse {
  Business business = 1;
  repeated ItemCategory itemCategory = 2;
}

// message GetPresignedPutUserAvatarRequest {
//   string objectName = 1;
// }

// message GetPresignedPutUserAvatarResponse {
//   string objectUrl = 1;
// }

message SignUpRequest {
  string email = 1;
  string fullName = 2;
  string code = 3;
  SignUpType signUpType = 4;
}

message SignUpResponse {
  string refreshToken = 1;
  string authorizationToken = 2;
  User user = 3;
}

// message UserExistsStreamRequest {
//   string alias = 1;
// }

// message UserExistsStreamResponse {
//   bool isValid = 1;
// }

message UserExistsRequest {
  string alias = 1;
}

message CheckSessionResponse {
  repeated string ipAddresses = 1;
}

message CreateVerificationCodeRequest {
  string email = 1;
  VerificationCodeType type = 2;
}

// message CreateVerificationCodeResponse {
//   VerificationCode verificationCode = 1;
// }

// message ListVerificationCodeRequest {
//   google.protobuf.FieldMask fieldMask = 1;
// }

// message ListVerificationCodeResponse {
//   repeated VerificationCode verificationCodes = 1;
// }

// message DeleteVerificationCodeRequest {
//   string id = 1;
// }

message GetVerificationCodeRequest {
  string code = 1;
  string email = 2;
  VerificationCodeType type = 3;
}

message SignInRequest {
  string email = 1;
  string code = 2;
}

message SignInResponse {
  string refreshToken = 1;
  string authorizationToken = 2;
  User user = 3;
  // Business business = 4;
}

// message HostnameRequest {
  
// }

// message HostnameResponse {
//   string hostname = 1;
// }

// // Entites Messages

message OrderedItem {
  string id = 1;
  string name = 2;
	string price = 3;
  string cartItemId = 4;
	string itemId = 5;
	int32 quantity = 6;
	string userId = 7;
	google.protobuf.Timestamp createTime = 8;
	google.protobuf.Timestamp updateTime = 9;
}

message Order {
  string id = 1;
  OrderStatusType status = 2;
  OrderType orderType = 3;
  ResidenceType residenceType = 4;
  string number = 5;
  string address = 6;
  string instructions = 7;
  Point coordinates = 8;
  string price = 9;
  string businessId = 10;
  string userId = 11;
  string deviceId = 12;
  string appVersion = 13;
  string businessName = 14;
  int32 quantity = 15;
  google.protobuf.Timestamp orderDate = 16;
  google.protobuf.Timestamp createTime = 17;
  google.protobuf.Timestamp updateTime = 18;
}

message User {
  string id = 1;
  string fullName = 2;
  string email = 3; 
  string phoneNumber = 4;
  string highQualityPhoto = 5;
  string highQualityPhotoUrl = 6;
  string highQualityPhotoBlurHash = 7;
  string lowQualityPhoto = 8;
  string lowQualityPhotoUrl = 9;
  string lowQualityPhotoBlurHash = 10;
  string thumbnail = 11;
  string thumbnailUrl = 12;
  string thumbnailBlurHash = 13;
  repeated UserAddress userAddress = 14;
  repeated Permission permissions = 15;
  google.protobuf.Timestamp createTime = 16;
  google.protobuf.Timestamp updateTime = 17;
}

message Municipality {
  string id = 1;
  string name = 2;
}

message UnionBusinessAndMunicipality {
  string id = 1;
  string name = 2;
  string municipalityId = 3;
}

message Business {
  string id = 1;
  string name = 2;
  string description = 3;
  string address = 4;
  string highQualityPhoto = 5;
  string highQualityPhotoBlurHash = 6;
  string lowQualityPhoto = 7;
  string lowQualityPhotoBlurHash = 8;
  string thumbnail = 9;
  string thumbnailBlurHash = 10;
  bool isOpen = 11;
  string deliveryPrice = 12;
  repeated double polygon = 13;
  Point coordinates = 14;
  int32 TimeMarginOrderMonth = 15;
  int32 TimeMarginOrderDay = 16;
  int32 TimeMarginOrderHour = 17;
  int32 TimeMarginOrderMinute = 18;
  bool toPickUp = 19;
  bool homeDelivery = 20;
  string businessBrandId = 21;
  string provinceId = 22;
  string municipalityId = 23;
  double distance = 24;
  BusinessStatusType status = 25;
  int32 cursor = 26;
  bool isInRange = 27;
  google.protobuf.Timestamp createTime = 28;
  google.protobuf.Timestamp updateTime = 29;
}

message Item {
  string id = 1;
  string name = 2;
  string description = 3;
  string price = 4;
  ItemStatusType status = 5;
  int32 availability = 6;
  string businessId = 7;
  string businessCollectionId = 8;
  string highQualityPhoto = 9;
  string highQualityPhotoBlurHash = 10;
  string lowQualityPhoto = 11;
  string lowQualityPhotoBlurHash = 12;
  string thumbnail = 13;
  string thumbnailBlurHash = 14;
  int32 cursor = 16;
  bool isInRange = 17;
  google.protobuf.Timestamp createTime = 18;
  google.protobuf.Timestamp updateTime = 19;
}

message CartItem {
  string id = 1;
  string name = 2;
  string itemId = 3;
  string authorizationTokenId = 4;
  string price = 5;
  int32 quantity = 6;
  string thumbnail = 7;
  string thumbnailBlurHash = 8;
  google.protobuf.Timestamp createTime = 9;
  google.protobuf.Timestamp updateTime = 10;
}


message ItemCategory {
  string id = 1;
  string name = 2;
  int32 index = 3;
  string businessId = 4;
  google.protobuf.Timestamp createTime = 5;
  google.protobuf.Timestamp updateTime = 6;
}

message SearchItem {
  string id = 1;
  string name = 2;
  string price = 3;
  ItemStatusType status = 4;
  string thumbnail = 5;
  string thumbnailBlurHash = 6;
  int32 cursor = 7;
}

message ItemPhoto {
  string id = 1;
  string itemId = 2;
  string highQualityPhoto = 3;
  string highQualityPhotoBlurHash = 4;
  string lowQualityPhoto = 5;
  string lowQualityPhotoBlurHash = 6;
  string thumbnail = 7;
  string thumbnailBlurHash = 8;
  google.protobuf.Timestamp createTime = 9;
  google.protobuf.Timestamp updateTime = 10;
}

// message BannedUser {
//   string id = 1;
//   string description = 2;
//   string userId = 3;
//   string email = 4;
//   string moderatorAuthorizationTokenId = 5;
//   string createTime = 6;
//   string updateTime = 7;
// }

// message BannedDevice {
//   string id = 1;
//   string description = 2;
//   string deviceId = 3;
//   string deviceId = 4;
//   string moderatorAuthorizationTokenId = 5;
//   string createTime = 6;
//   string updateTime = 7;
// }

message Session {
  string id = 1;
  PlatformType platform = 2;
  string systemVersion = 3;
  string model = 4;
  AppType app = 5;
  string appVersion = 6;
  string deviceId = 7;
  bool actual = 8;
}

// message Device {
//   string id = 1;
//   PlatformType platform = 2;
//   string systemVersion = 3;
//   string deviceId = 4;
//   string firebaseCloudMessagingId = 5;
//   string model = 6;
//   string createTime = 7;
//   string updateTime = 8;
// }

message UserAddress {
  enum UserAddressType {
  UNSPECIFIED = 0;
  HOUSE = 1;
  APARTAMENT = 2;
  }
  string id = 1;
  string tag = 2;
  UserAddressType residenceType = 3;
  string number = 4;
  string address = 5;
  Point coordinates = 6;
  string instructions = 7;
  string userId = 8;
  string provinceId = 9;
  string municipalityId = 10;
  google.protobuf.Timestamp createTime = 11;
  google.protobuf.Timestamp updateTime = 12;
}

message Permission {
  string id = 1;
  string name = 2;
  string userId = 4;
  string businessId = 5;
  google.protobuf.Timestamp createTime = 6;
  google.protobuf.Timestamp updateTime = 7;
}

message Polygon {
  repeated double coordinates = 1;
}

message ErrorDetail {
  string subject = 1;
  string description = 2;
}

// // Enums

enum SearchMunicipalityType {
  SearchMunicipalityTypeUnspecified = 0;
  More = 1;
  NoMore = 2;
}

enum VerificationCodeType {
  VerificationCodeTypeUnspecified = 0;
  SignIn = 1;
  SignUp = 2;
  SignUpBusinessOwner = 3;
  ChangeUserEmail = 4;
}

enum ItemStatusType {
  ItemStatusTypeUnspecified = 0;
  Available = 1;
  Unavailable = 2;
  Deprecated = 3;
}

enum BusinessStatusType {
  BusinessStatusTypeUnspecified = 0;
  BusinessAvailable = 1;
  BusinessUnavailable = 2;
}

enum PlatformType {
  PlatformTypeUnspecified = 0;
  IOS = 1;
  Android = 2;
}

enum AppType  {
  AppTypeUnspecified = 0;
  App = 1;
  BusinessApp = 2;
}

enum OrderStatusType {
  OrderStatusTypeUnspecified = 0; 
  OrderStatusTypePending = 1;
  OrderStatusTypeApproved = 2;
  OrderStatusTypeRejected = 3;
  OrderStatusTypeReceived = 4;
  OrderStatusTypeCanceled = 5;
  OrderStatusTypeExpired = 6;
  OrderStatusTypeDone = 7;
  OrderStatusTypeStarted = 8;
}

enum OrderType {
  OrderTypeUnspecified = 0;
  OrderTypePickUp = 1; 
  OrderTypeHomeDelivery = 2;
}

enum ResidenceType {
  ResidenceTypeUnspecified = 0;
  ResidenceTypeHouse = 1;
  ResidenceTypeApartment = 2;
}

enum SignUpType {
  SignUpUnspecified = 0;
  SignUpUser = 1;
  SignUpBusiness = 2;
}

enum PhotoType {
  PhotoTypeUnspecified = 0;
  PhotoTypeBusiness = 1;
  PhotoTypeItem = 2;
  PhotoTypeUser = 3;
}

// 'Sign_In', 'Sign_Up', 'Change_User_Email'

// message BusinessSchedule {
//   string id = 1;
//   google.protobuf.Timestamp opening_time_sunday = 2;
//   google.protobuf.Timestamp closing_time_sunday = 3;
//   google.protobuf.Timestamp opening_time_monday = 4;
//   google.protobuf.Timestamp closing_time_monday = 5;
//   google.protobuf.Timestamp opening_time_tuesday = 6;
//   google.protobuf.Timestamp closing_time_tuesday = 7;
//   google.protobuf.Timestamp opening_time_wednesday = 8;
//   google.protobuf.Timestamp closing_time_wednesday = 9;
//   google.protobuf.Timestamp opening_time_thursday = 10;
//   google.protobuf.Timestamp closing_time_thursday = 11;
//   google.protobuf.Timestamp opening_time_friday = 12;
//   google.protobuf.Timestamp closing_time_friday = 13;
//   google.protobuf.Timestamp opening_time_saturday = 14;
//   google.protobuf.Timestamp closing_time_saturday = 15;
//   google.protobuf.Timestamp opening_time_delivery_sunday = 16;
//   google.protobuf.Timestamp closing_time_delivery_sunday = 17;
//   google.protobuf.Timestamp opening_time_delivery_monday = 18;
//   google.protobuf.Timestamp closing_time_delivery_monday = 19;
//   google.protobuf.Timestamp opening_time_delivery_tuesday = 20;
//   google.protobuf.Timestamp closing_time_deliveryTuesday = 21;
//   google.protobuf.Timestamp opening_time_delivery_wednesday = 22;
//   google.protobuf.Timestamp closing_time_delivery_wednesday = 23;
//   google.protobuf.Timestamp opening_time_delivery_thursday = 24;
//   google.protobuf.Timestamp closing_time_delivery_thursday = 25;
//   google.protobuf.Timestamp opening_time_delivery_friday = 26;
//   google.protobuf.Timestamp closing_time_delivery_friday = 27;
//   google.protobuf.Timestamp opening_time_delivery_saturday = 28;
//   google.protobuf.Timestamp closing_time_delivery_saturday = 29;
// }

message Point {
  double latitude = 1;
  double longitude = 2;
}